# programming-practice

./: .gitignore  LeetCode\0001-two-sum\solution.cpp  LeetCode\0002-add-two-numbers\solution.cpp  LeetCode\0003-longest-substring-without-repeating-characters\solution.cpp  LeetCode\0003-longest-substring-without-repeating-characters\solution.java  LeetCode\0007-reverse-integer\solution.java  LeetCode\0008-string-to-integer-atoi\solution.cpp  LeetCode\0019-remove-nth-node-from-end-of-list\solution.java  LeetCode\0020-valid-parentheses\solution.cpp  LeetCode\0053-maximum-subarray\solution.cpp  LeetCode\0053-maximum-subarray\solution.java  LeetCode\0070-climbing-stairs\solution.java  LeetCode\0075-sort-colors\solution.java  LeetCode\0100-same-tree\solution.java  LeetCode\0104-maximum-depth-of-binary-tree\solution.java  LeetCode\0141-linked-list-cycle\solution.java  LeetCode\0154-find-minimum-in-rotated-sorted-array-ii\solution.cpp  LeetCode\0155-min-stack\solution.cpp  LeetCode\0167-two-sum-ii---input-array-is-sorted\solution.cpp  LeetCode\0217-contains-duplicate\solution.cpp  LeetCode\0347-top-k-frequent-elements\solution.java  LeetCode\0374-guess-number-higher-or-lower\solution.java  LeetCode\0380-insert-delete-getrandom-o1\solution.cpp  LeetCode\0451-sort-characters-by-frequency\solution.cpp  LeetCode\0496-next-greater-element-i\solution.java  LeetCode\1035-cousins-in-binary-tree\solution.java  README.md
AdventOfCode/2020/: CMakeLists.txt
LeetCode/: CMakeLists.txt  problems.xlsx
LeetCode/0001-two-sum/: solution.cpp
LeetCode/0002-add-two-numbers/: solution.java
LeetCode/0003-longest-substring-without-repeating-characters/: solution.cpp
LeetCode/0005-longest-palindromic-substring/: solution.cpp
LeetCode/0006-zigzag-conversion/: solution.cpp
LeetCode/0007-reverse-integer/: solution.cpp
LeetCode/0009-palindrome-number/: solution.cpp
LeetCode/0011-container-with-most-water/: solution.cpp
LeetCode/0013-roman-to-integer/: solution.cpp
LeetCode/0014-longest-common-prefix/: solution.cpp
LeetCode/0015-3sum/: solution.cpp
LeetCode/0017-letter-combinations-of-a-phone-number/: solution.cpp
LeetCode/0019-remove-nth-node-from-end-of-list/: solution.cpp
LeetCode/0020-valid-parentheses/: solution.cpp
LeetCode/0021-merge-two-sorted-lists/: solution.cpp  solution.java
LeetCode/0023-merge-k-sorted-lists/: solution.cpp
LeetCode/0024-swap-nodes-in-pairs/: solution.cpp
LeetCode/0026-remove-duplicates-from-sorted-array/: solution.cpp
LeetCode/0027-remove-element/: solution.cpp
LeetCode/0028-find-the-index-of-the-first-occurrence-in-a-string/: solution.cpp
LeetCode/0034-find-first-and-last-position-of-element-in-sorted-array/: solution.cpp
LeetCode/0035-search-insert-position/: solution.cpp
LeetCode/0036-valid-sudoku/: solution.cpp
LeetCode/0046-permutations/: solution.cpp
LeetCode/0047-permutations-ii/: solution.cpp
LeetCode/0049-group-anagrams/: solution.cpp
LeetCode/0051-n-queens/: solution.cpp
LeetCode/0052-n-queens-ii/: solution.cpp
LeetCode/0053-maximum-subarray/: solution.cpp
LeetCode/0055-jump-game/: solution.cpp
LeetCode/0056-merge-intervals/: solution.cpp
LeetCode/0058-length-of-last-word/: solution.cpp
LeetCode/0061-rotate-list/: solution.cpp
LeetCode/0062-unique-paths/: solution.cpp
LeetCode/0066-plus-one/: solution.cpp
LeetCode/0067-add-binary/: solution.cpp
LeetCode/0068-text-justification/: solution.cpp
LeetCode/0070-climbing-stairs/: solution.cpp
LeetCode/0074-search-a-2d-matrix/: solution.cpp
LeetCode/0075-sort-colors/: solution.cpp
LeetCode/0078-subsets/: solution.cpp
LeetCode/0080-remove-duplicates-from-sorted-array-ii/: solution.cpp
LeetCode/0083-remove-duplicates-from-sorted-list/: solution.cpp
LeetCode/0088-merge-sorted-array/: solution.cpp
LeetCode/0094-binary-tree-inorder-traversal/: solution.cpp
LeetCode/0096-unique-binary-search-trees/: solution.cpp
LeetCode/0098-validate-binary-search-tree/: solution.cpp
LeetCode/0100-same-tree/: solution.cpp
LeetCode/0101-symmetric-tree/: solution.cpp
LeetCode/0104-maximum-depth-of-binary-tree/: solution.cpp
LeetCode/0112-path-sum/: solution.cpp
LeetCode/0113-path-sum-ii/: solution.cpp
LeetCode/0116-populating-next-right-pointers-in-each-node/: solution.cpp
LeetCode/0117-populating-next-right-pointers-in-each-node-ii/: solution.cpp
LeetCode/0118-pascals-triangle/: solution.cpp
LeetCode/0120-triangle/: solution.cpp
LeetCode/0121-best-time-to-buy-and-sell-stock/: solution.cpp  solution.java
LeetCode/0128-longest-consecutive-sequence/: solution.cpp
LeetCode/0129-sum-root-to-leaf-numbers/: solution.cpp
LeetCode/0136-single-number/: solution.cpp
LeetCode/0137-single-number-ii/: solution.cpp
LeetCode/0138-copy-list-with-random-pointer/: solution.cpp
LeetCode/0141-linked-list-cycle/: solution.cpp
LeetCode/0142-linked-list-cycle-ii/: solution.cpp
LeetCode/0143-reorder-list/: solution.cpp
LeetCode/0150-evaluate-reverse-polish-notation/: solution.cpp
LeetCode/0151-reverse-words-in-a-string/: solution.cpp
LeetCode/0152-maximum-product-subarray/: solution.cpp
LeetCode/0160-intersection-of-two-linked-lists/: solution.cpp
LeetCode/0165-compare-version-numbers/: solution.cpp
LeetCode/0167-two-sum-ii---input-array-is-sorted/: solution.cpp
LeetCode/0168-excel-sheet-column-title/: solution.cpp
LeetCode/0169-majority-element/: solution.cpp
LeetCode/0171-excel-sheet-column-number/: solution.cpp
LeetCode/0175-combine-two-tables/: solution.sql
LeetCode/0176-second-highest-salary/: solution.sql
LeetCode/0180-consecutive-numbers/: solution.sql
LeetCode/0181-employees-earning-more-than-their-managers/: solution.sql
LeetCode/0182-duplicate-emails/: solution.sql
LeetCode/0183-customers-who-never-order/: solution.sql
LeetCode/0189-rotate-array/: solution.cpp
LeetCode/0190-reverse-bits/: solution.cpp
LeetCode/0191-number-of-1-bits/: solution.cpp
LeetCode/0197-rising-temperature/: solution.sql
LeetCode/0198-house-robber/: solution.cpp  solution.java
LeetCode/0199-binary-tree-right-side-view/: solution.cpp
(+811 files in other folders)
