cmake_minimum_required(VERSION 3.0)
project(LeetCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(Guess_Number_Higher_or_Lower "374 - Guess Number Higher or Lower/main.cpp")
add_executable(Invert_Binary_Tree "226 - Invert Binary Tree/main.cpp")
add_executable(Count_Complete_Tree_Nodes "222 - Count Complete Tree Nodes/main.cpp")
add_executable(Min_Stack "155 - Min Stack/main.cpp" "155 - Min Stack/minstack.cpp")
add_executable(Sort_Colors "75 - Sort Colors/main.cpp")
add_executable(Merge_Two_Sorted_Lists "21 - Merge Two Sorted Lists/main.cpp")
add_executable(Valid_Parentheses "20 - Valid Parentheses/main.cpp")
add_executable(Longest_Common_Prefix "14 - Longest Common Prefix/main.cpp")
add_executable(Longest_Substring_Without_Repeating_Characters "3 - Longest Substring Without Repeating Characters/main.cpp")
add_executable(Add_Two_Numbers "2 - Add Two Numbers/main.cpp")
add_executable(Two_Sum "1 - Two Sum/main.cpp")