cmake_minimum_required(VERSION 3.0)
project(LeetCode)

set(CMAKE_CXX_STANDARD 14)
add_executable(Nth_Tribonacci_Number "1137 - N-th Tribonacci Number/main.cpp")
add_executable(Rotting_Oranges "994 - Rotting Oranges/main.cpp")
add_executable(Min_Cost_Climbing_Stairs "746 - Min Cost Climbing Stairs/main.cpp")
add_executable(Daily_Temperatures "739 - Daily Temperatures/main.cpp")
add_executable(Binary_Search "704 - Binary Search/main.cpp")
add_executable(Fibonacci_Number "509 - Fibonacci Number/main.cpp")
add_executable(Arranging_Coins "441 - Arranging Coins/main.cpp")
add_executable(Sum_of_Left_Leaves "404 - Sum of Left Leaves/main.cpp")
add_executable(Insert_Delete_GetRandom_O1 "380 - Insert Delete GetRandom O(1)/main.cpp")
add_executable(Guess_Number_Higher_or_Lower "374 - Guess Number Higher or Lower/main.cpp")
add_executable(Counting_Bits "338 - Counting Bits/main.cpp")
add_executable(Missing_Number "268 - Missing Number/main.cpp")
add_executable(Valid_Anagram "242 - Valid Anagram/main.cpp")
add_executable(Product_of_Array_Except_Self "238 - Product of Array Except Self/main.cpp")
add_executable(Invert_Binary_Tree "226 - Invert Binary Tree/main.cpp")
add_executable(Count_Complete_Tree_Nodes "222 - Count Complete Tree Nodes/main.cpp")
add_executable(Contains_Duplicate "217 - Contains Duplicate/main.cpp")
add_executable(Reverse_Linked_List "206 - Reverse Linked List/main.cpp")
add_executable(Remove_Linked_List_Elements "203 - Remove Linked List Elements/main.cpp")
add_executable(Reverse_Bits "190 - Reverse Bits/main.cpp")
add_executable(Number_of_1_bits "191 - Number of 1 Bits/main.cpp")
add_executable(Min_Stack "155 - Min Stack/main.cpp" "155 - Min Stack/minstack.cpp")
add_executable(First_Bad_Version "278 - First Bad Version/main.cpp")
add_executable(Single_Number_3 "260 - Single Number III/main.cpp")
add_executable(Linked_List_Cycle "141 - Linked List Cycle/main.cpp")
add_executable(Single_Number "136 - Single Number/main.cpp")
add_executable(Sum_Root_to_Leaf_Numbers "129 - Sum Root to Leaf Numbers/main.cpp")
add_executable(Best_Time_to_Buy_and_Sell_Stock "121 - Best Time to Buy and Sell Stock/main.cpp")
add_executable(Maximum_Depth_of_Binary_Tree "104 - Maximum Depth of Binary Tree/main.cpp")
add_executable(Same_Tree "100 - Same Tree/main.cpp")
add_executable(Unique_Binary_Search_Trees "96 - Unique Binary Search Trees/main.cpp")
add_executable(Merge_Sorted_Array "88 - Merge Sorted Array/main.cpp")
add_executable(Sort_Colors "75 - Sort Colors/main.cpp")
add_executable(Climbing_Stairs "70 - Climbing Stairs/main.cpp")
add_executable(Length_of_Last_Word "58 - Length of Last Word/main.cpp")
add_executable(Maximum_Subarray "53 - Maximum Subarray/main.cpp")
add_executable(Search_Insert_Position "35 - Search Insert Position/main.cpp")
add_executable(Search_in_Rotated_Sorted_Array "33 - Search in Rotated Sorted Array/main.cpp")
add_executable(Merge_k_Sorted_Lists "23 - Merge k Sorted Lists/main.cpp")
add_executable(Merge_Two_Sorted_Lists "21 - Merge Two Sorted Lists/main.cpp")
add_executable(Valid_Parentheses "20 - Valid Parentheses/main.cpp")
add_executable(Letter_Combinations_of_a_Phone_Number "17 - Letter Combinations of a Phone Number/main.cpp")
add_executable(3Sum "15 - 3Sum/main.cpp")
add_executable(Longest_Common_Prefix "14 - Longest Common Prefix/main.cpp")
add_executable(Reverse_Integer "7 - Reverse Integer/main.cpp")
add_executable(Longest_Palindromic_Substring "5 - Longest Palindromic Substring/main.cpp")
add_executable(Longest_Substring_Without_Repeating_Characters "3 - Longest Substring Without Repeating Characters/main.cpp")
add_executable(Add_Two_Numbers "2 - Add Two Numbers/main.cpp")
add_executable(Two_Sum "1 - Two Sum/main.cpp")